######## MultiRepMacsChIPSeq Revision History #############


v16.1
	multirep_macs2_pipeline.pl
	- Bug fixes to ensure command line options are passed properly to the 
	  Runner library object. Fixes problems with running in single-end mode. 

v16
	multirep_macs2_pipeline.pl
	- Completely restructure internal code (!!!), breaking apart the script 
	  into separate code libraries for future work and sustainability. 
	  No functional changes.
	
	recall_peaks.pl
	- New script for calling new peaks with different parameters from a 
	  completed pipeline run. This avoids re-running the entire pipeline or 
	  performing it manually. Utilizes the new library code to avoid redundancy.
	
	subset_bigwig.pl
	- New script to extract one chromosome from a bigWig file, basically to 
	  make a smaller version for quick evaluation on a personal computer.
	
	print_chromosome_lengths.pl
	- Improve chromosome order output from bigWig files, since the adapter 
	  does not maintain order.

v15.2
	multirep_macs2_pipeline.pl
	- Check for duplicate input bam files, which can cause havoc later on.
	- Only run optical duplicate checking when necessary
	- Minor fixes

	print_chromosome_lengths.pl
	- bug fix
	
v15.1
	multirep_macs2_pipeline.pl
	- Change maxdup option to maxdepth. The option was misnamed, as setting 
	  this to 1 would technically still leave 1 duplicate behind. Now 
	  setting to 1 actually ensures all duplicates are removed, leaving 1 
	  alignment per position.
	- Improve error checking and reporting, especially of inputs. Default 
	  to generating custom exclusion list when one isn't provided or available.
	- Change default profile data collection to +/- 1 Kb (25 x 40 bins each side).
	
	bam_partial_dedup.pl
	- Major update to version 5. Max option now sets maximum depth, whereas 
	  before it implied depth but actually did duplicate number.
	- Removed faulty method of calculating maximum depth to achieve target 